Fix bug search.
