# app/Http/Controllers/restapi/SearchApi.php
@@ -2,9 +2,152 @@
 
 namespace App\Http\Controllers\restapi;
 
+use App\Enums\ServiceStatus;
+use App\Enums\UserStatus;
 use App\Http\Controllers\Api;
+use App\Models\PartnerInformations;
+use App\Models\Services;
+use App\Models\User;
+use Illuminate\Http\Request;
 
 class SearchApi extends Api
 {
-    //
+
+    /**
+     * @OA\Get(
+     *     path="/api/search/user",
+     *     summary="Search user by keyword, price range, and location",
+     *     tags={"Search"},
+     *     @OA\Parameter(
+     *         description="Keyword to search",
+     *         in="query",
+     *         name="keyword",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         description="Minimum price",
+     *         in="query",
+     *         name="minPrice",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         description="Maximum price",
+     *         in="query",
+     *         name="maxPrice",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         description="Province ID",
+     *         in="query",
+     *         name="province_id",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         description="District ID",
+     *         in="query",
+     *         name="district_id",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         description="Commune ID",
+     *         in="query",
+     *         name="commune_id",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation"
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Bad request"
+     *     )
+     * )
+     */
+    public function searchUser(Request $request)
+    {
+        try {
+            $keyword = $request->input('keyword');
+            $minPrice = $request->input('minPrice', 0);
+            $maxPrice = $request->input('maxPrice', 10000000);
+            $province_id = $request->input('province_id');
+            $district_id = $request->input('district_id');
+            $commune_id = $request->input('commune_id');
+
+            $data = User::where('users.status', UserStatus::ACTIVE)
+                ->leftJoin('partner_informations', 'users.id', '=', 'partner_informations.user_id')
+                ->leftJoin('services', 'users.id', '=', 'services.user_id')
+                ->leftJoin('categories', 'categories.id', '=', 'services.category_id');
+
+            if ($keyword) {
+                $data->where(function ($query) use ($keyword) {
+                    $query->orWhere('partner_informations.name', 'like', "%$keyword%")
+                        ->orWhere('users.full_name', 'like', "%$keyword%")
+                        ->orWhere('partner_informations.phone', 'like', "%$keyword%")
+                        ->orWhere('users.phone', 'like', "%$keyword%")
+                        ->orWhere('partner_informations.email', 'like', "%$keyword%")
+                        ->orWhere('users.email', 'like', "%$keyword%")
+                        ->orWhere('services.name_en', 'like', "%$keyword%")
+                        ->orWhere('services.name_cn', 'like', "%$keyword%")
+                        ->orWhere('services.name_vi', 'like', "%$keyword%")
+                        ->orWhere('categories.name_cn', 'like', "%$keyword%")
+                        ->orWhere('categories.name_en', 'like', "%$keyword%")
+                        ->orWhere('categories.name_vi', 'like', "%$keyword%");
+                });
+            }
+
+            $data->whereBetween('services.discount_price', [$minPrice, $maxPrice]);
+
+            $locationFilters = [
+                'partner_informations.province_id' => $province_id,
+                'partner_informations.district_id' => $district_id,
+                'partner_informations.commune_id' => $commune_id
+            ];
+            foreach ($locationFilters as $field => $value) {
+                if ($value) {
+                    $data->where($field, $value);
+                }
+            }
+
+            $results = $data->distinct()
+                ->select('users.*')
+                ->cursor()
+                ->map(function ($item) {
+                    $result = $item->toArray();
+
+                    $partnerInformation = PartnerInformations::where('user_id', $item->id)->first();
+                    $result['partner_information'] = $partnerInformation?->toArray();
+
+                    $services = Services::where('user_id', $item->id)->get();
+                    $result['services'] = $services->toArray();
+
+                    return $result;
+                });
+
+
+            $data = returnMessage(1, 200, $results, 'Success');
+            return response($data, 200);
+        } catch (\Exception $exception) {
+            $data = returnMessage(-1, 400, '', $exception->getMessage());
+            return response($data, 400);
+        }
+    }
 }
